<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="title">My Nanodegree Apps!</string>
    <string name="spotify">SPOTIFY STREAMER app</string>
    <string name="score">SCORES app</string>
    <string name="library">LIBRARY app</string>
    <string name="bigger">BUILD IT BIGGER app</string>
    <string name="reader">XYZ READER app</string>
    <string name="capstone">CAPSTONE app</string>
    <string name="toast">This button will launch my</string>
</resources>
