<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="1"
    tools:context="com.github.sebmilardo.myappportfolio.main"
    android:background="@color/colorBackground"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/colorText"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp" />

    <Button
        android:id="@+id/buttonSpotify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:width="205dp"
        android:text="@string/spotify"
        android:onClick="displayToast"
        android:textColor="@color/colorAccent"
        android:background="@color/colorPrimary"
        android:layout_margin="5dp" />

    <Button
        android:id="@+id/buttonScore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:width="205dp"
        android:text="@string/score"
        android:onClick="displayToast"
        android:textColor="@color/colorAccent"
        android:background="@color/colorPrimary"
        android:layout_margin="5dp" />

    <Button
        android:id="@+id/buttonLibrary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:width="205dp"
        android:text="@string/library"
        android:onClick="displayToast"
        android:textColor="@color/colorAccent"
        android:background="@color/colorPrimary"
        android:layout_margin="5dp" />

    <Button
        android:id="@+id/buttonBigger"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:width="205dp"
        android:text="@string/bigger"
        android:onClick="displayToast"
        android:textColor="@color/colorAccent"
        android:background="@color/colorPrimary"
        android:layout_margin="5dp" />

    <Button
        android:id="@+id/buttonReader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:width="205dp"
        android:text="@string/reader"
        android:onClick="displayToast"
        android:textColor="@color/colorAccent"
        android:background="@color/colorPrimary"
        android:layout_margin="5dp" />

    <Button
        android:id="@+id/buttonCapstone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/capstone"
        android:onClick="displayToast"
        android:textColor="@color/colorText"
        android:background="@color/colorPrimary"
        android:layout_margin="5dp" />

</LinearLayout>
